fixes on import
fixes